--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Promise.all Example</h1>
+    
+    <!-- Table with id 'resultTable' -->
     <table id="resultTable">
         <tr>
             <td colspan="2">Loading...</td>
